Add grpcio-tools package for compiling protobuf files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = [
     "Florian Klien <florian.klien@smaxtec.com>",
     "Kristof Krenn <kristof.krenn@smaxtec.com>",
     "Matthias Thym <matthias.thym@smaxtec.com>",
+    "Matthias Wutte <matthias.wutte@gmail.com>",
     "Matthias Wutte <matthias.wutte@smaxtec.com>"
 ]
 license = "MIT"
@@ -29,9 +30,13 @@ mock = "^5.1.0"
 [tool.poetry.group.rest.dependencies]
 flask = ">1.1.1"
 
+[tool.poetry.group.protoc.dependencies]
+grpcio-tools = "1.48.2"
+
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.5.1"]
 build-backend = "poetry.core.masonry.api"
+
 
 [tool.semantic_release]
 version_variable = [ "pyproject.toml:version" ]
