--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cattledb"
-version = "1.0.2"
+version = "1.1.0"
 description = "Device Data Store on Bigtable"
 authors = [
     "Florian Klien <florian.klien@smaxtec.com>",
@@ -15,23 +15,20 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.7"
 msgpack = "^1.0.5"
-pendulum = ">=2.0.1"
+pendulum = "^2.0.1"
 grpcio = "^1.56.0"
 blinker = "^1.6.2"
-protobuf = "3.20.1"
-google-cloud-bigtable = ">=1.2.1"
-google-cloud-core = ">=1.2.0"
+protobuf = "^4.0.0"
+google-cloud-bigtable = "^2.0.0"
+google-cloud-core = "2.0.0"
 click = "^8.1.5"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.0"
 mock = "^5.1.0"
 
-[tool.poetry.group.rest.dependencies]
-flask = ">1.1.1"
-
 [tool.poetry.group.protoc.dependencies]
-grpcio-tools = "1.48.2"
+grpcio-tools = "^1.59.0"
 
 [build-system]
 requires = ["poetry-core>=1.5.1"]
