--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ grpcio = "^1.56.0"
 blinker = "^1.6.2"
 protobuf = "^4.0.0"
 google-cloud-bigtable = "^2.0.0"
-google-cloud-core = "2.0.0"
+google-cloud-core = "^2.0.0"
 click = "^8.1.5"
 
 [tool.poetry.group.test.dependencies]
