--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ readme = "README.md"
 python = ">=3.7"
 msgpack = "^1.0.5"
 pendulum = ">=2.0.1"
-grpcio = "^1.56.0"
+grpcio = "^1.59.0"
 blinker = "^1.6.2"
 protobuf = "3.20.1"
 google-cloud-bigtable = ">=1.2.1"
@@ -30,8 +30,10 @@ mock = "^5.1.0"
 [tool.poetry.group.rest.dependencies]
 flask = ">1.1.1"
 
-[tool.poetry.group.protoc.dependencies]
-grpcio-tools = "1.48.2"
+# [tool.poetry.group.protoc.dependencies]
+# Wheel cannot be built for 1.48.2
+# Versions above 1.48.2 require protobuf version > 3.20.1
+# grpcio-tools = "1.48.2"
 
 [build-system]
 requires = ["poetry-core>=1.5.1"]
